--- a/GameConfigurations/真·三國無双 7 Empires Dynasty Warroirs 8 Empires/xidi.ini
+++ b/GameConfigurations/真·三國無双 7 Empires Dynasty Warroirs 8 Empires/xidi.ini
@@ -22,3 +22,5 @@ ButtonRS            = Button(12)
 
 [Workarounds]
 ActiveVirtualControllerMask = 0x03
+
+; 无双7可以使用zmod获得4K高分辨率渲染：https://github.com/Fragonite/zmod
