--- a/GameConfigurations/戦女神MEMORIA/xidi.ini
+++ b/GameConfigurations/戦女神MEMORIA/xidi.ini
@@ -15,15 +15,23 @@
 Type = IkusaMegami
 
 [CustomMapper:IkusaMegami]
-Template = DigitalGamepad
-ButtonA             = Button(2)
-ButtonB             = Button(1)
-ButtonX             = Button(4)
-ButtonY             = Button(3)
+Template = XInputNative
+
+; xidi和游戏默认使用的api还是有冲突，会导致无法使用十字键的功能
+; 这里引用同功能的键盘按键。注意，必须打开Analog开关，否则不可用
+DpadUp              = Keyboard(Up)
+DpadDown            = Keyboard(Down)
+DpadLeft            = Keyboard(Left)
+DpadRight           = Keyboard(Right)
+
+TriggerLT           = MouseButton(Right)
+TriggerRT           = MouseButton(Left)
+
 StickRightX         = MouseAxis(X)
 StickRightY         = MouseAxis(Y)
-ButtonLS            = MouseButton(Right)
-ButtonRS            = MouseButton(Left)
+
+; 如果出现弹窗那么按右摇杆消去，仅作为一个临时手段
+ButtonRS            = Keyboard(Y)
 
 [Workarounds]
 ActiveVirtualControllerMask = 0x01
