--- a/GameConfigurations/戦女神VERITA/xidi.ini
+++ b/GameConfigurations/戦女神VERITA/xidi.ini
@@ -6,9 +6,6 @@
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Authors:          Kanadeforever
 ; Last Modified:    20240801
-;
-; Note:Used Game Default Joystick icon mode.
-;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [Mapper]
@@ -16,14 +13,15 @@ Type = IkusaMegami
 
 [CustomMapper:IkusaMegami]
 Template = DigitalGamepad
-ButtonA             = Button(2)
-ButtonB             = Button(3)
-ButtonX             = Button(1)
-ButtonY             = Button(4)
+
 StickRightX         = MouseAxis(X)
 StickRightY         = MouseAxis(Y)
+
 TriggerLT = MouseButton(Right)
 TriggerRT = MouseButton(Left)
+
+; 如果出现弹窗那么按右摇杆消去，仅作为一个临时手段
+ButtonRS            = Keyboard(Y)
 
 [Workarounds]
 ActiveVirtualControllerMask = 0x01
