--- a/GameConfigurations/戦女神ZERO/xidi.ini
+++ b/GameConfigurations/戦女神ZERO/xidi.ini
@@ -13,10 +13,15 @@ Type = IkusaMegami
 
 [CustomMapper:IkusaMegami]
 Template = DigitalGamepad
+
 StickRightX         = MouseAxis(X)
 StickRightY         = MouseAxis(Y)
+
 TriggerLT = MouseButton(Right)
 TriggerRT = MouseButton(Left)
+
+; 如果出现弹窗那么按右摇杆消去，仅作为一个临时手段
+ButtonRS            = Keyboard(Y)
 
 [Workarounds]
 ActiveVirtualControllerMask = 0x01
