--- a/GameConfigurations/Colin McRae Rally 3/xidi.ini
+++ b/GameConfigurations/Colin McRae Rally 3/xidi.ini
@@ -8,10 +8,12 @@
 ; Last Modified:    20240122
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
+; this game need Silent patch
+
 [Mapper]
 Type = CMR3
 
 [CustomMapper:CMR3]
 Template = XInputSharedTriggers
-ButtonStart     = Keyboard(Enter)
-ButtonBack     = Keyboard(Esc)
+ButtonStart = Keyboard(Enter)
+ButtonBack = Keyboard(Esc)
