--- a/GameConfigurations/Colin McRae Rally 04/xidi.ini
+++ b/GameConfigurations/Colin McRae Rally 04/xidi.ini
@@ -13,9 +13,9 @@ Type = CMR04
 
 [CustomMapper:CMR04]
 Template = XInputSharedTriggers
-DpadUp          = Axis(Y, -)
-DpadDown        = Axis(Y, +)
-DpadLeft        = Axis(X, -)
-DpadRight       = Axis(X, +)
-ButtonStart     = Keyboard(Enter)
-ButtonBack     = Keyboard(Esc)
+DpadUp = Keyboard(Up)
+DpadDown = Keyboard(Down)
+DpadLeft = Keyboard(Left)
+DpadRight = Keyboard(Right)
+ButtonStart = Keyboard(Enter)
+ButtonBack = Keyboard(Esc)
