--- a/GameConfigurations/Colin McRae Rally 2005/xidi.ini
+++ b/GameConfigurations/Colin McRae Rally 2005/xidi.ini
@@ -9,13 +9,13 @@
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [Mapper]
-Type = 2005
+Type = CMR2005
 
-[CustomMapper:2005]
+[CustomMapper:CMR2005]
 Template = XInputSharedTriggers
-DpadUp          = Axis(Y, -)
-DpadDown        = Axis(Y, +)
-DpadLeft        = Axis(X, -)
-DpadRight       = Axis(X, +)
-ButtonStart     = Keyboard(Enter)
-ButtonBack     = Keyboard(Esc)
+DpadUp = Keyboard(Up)
+DpadDown = Keyboard(Down)
+DpadLeft = Keyboard(Left)
+DpadRight = Keyboard(Right)
+ButtonStart = Keyboard(Enter)
+ButtonBack = Keyboard(Esc)
