--- a/GameConfigurations/Xanadu Next/xidi.ini
+++ b/GameConfigurations/Xanadu Next/xidi.ini
@@ -9,7 +9,20 @@
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [Mapper]
-Type = StandardGamepad
+Type = Xanadu
+
+[CustomMapper:Xanadu]
+Template = StandardGamepad
+
+; Right Stick maps mouse movement, RT maps the left mouse button
+; Replaces the inconvenient mouse control that comes with the game.
+StickRightX = MouseAxis(X)
+StickRightY = MouseAxis(Y)
+TriggerRT = MouseButton(Left)
+
+[Properties]
+; mouse move speed change.
+MouseSpeedScalingFactorPercent = 50
 
 [Workarounds]
 ActiveVirtualControllerMask = 0x01
