--- a/GameConfigurations/SEGA RALLY 2/xidi.ini
+++ b/GameConfigurations/SEGA RALLY 2/xidi.ini
@@ -24,11 +24,20 @@ Type = SR2
 
 [CustomMapper:SR2]
 Template = XInputSharedTriggers
-DpadUp    = Axis(Y, -)
-DpadDown  = Axis(Y, +)
-DpadLeft  = Axis(X, -)
-DpadRight = Axis(X, +)
-ButtonStart     = Keyboard(Enter)
+
+ButtonStart = Keyboard(Enter)
+ButtonBack = Keyboard(Esc)
+
+DpadUp = Keyboard(Up)
+DpadDown = Keyboard(Down)
+DpadLeft = Keyboard(Left)
+DpadRight = Keyboard(Right)
+
+; Another settings.
+; DpadUp = Axis(Y, -)
+; DpadDown = Axis(Y, +)
+; DpadLeft = Axis(X, -)
+; DpadRight = Axis(X, +)
 
 [Workarounds]
 ActiveVirtualControllerMask = 0x03
