--- a/GameConfigurations/Final Fantasy VII/Xidi.ini
+++ b/GameConfigurations/Final Fantasy VII/Xidi.ini
@@ -1,32 +1,46 @@
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Final Fantasy VII
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-; Xidi Version:     3.0.0
-; Xidi Form:        HookModule + WinMM
+; Xidi Version:     4.2.0
+; Xidi Form:        WinMM
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-; Authors:          samuelgr
-; Last Modified:    10/24/2021
+; Last Modified:    11/21/2024
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 
 [Mapper]
 Type            = FinalFantasy7
 
-
+; Adapt to the default controller settings of the Steam version.
 [CustomMapper:FinalFantasy7]
 Template        = DigitalGamepad
 
 ; [OK]
-ButtonB         = Button(3)
-
+ButtonA         = Button(1)
 ; [CANCEL]
-ButtonA         = Button(2)
-
-; [MENU]
-ButtonY         = Button(4)
-
+ButtonB         = Button(2)
 ; [SWITCH]
-ButtonX         = Button(1)
+ButtonX         = Button(5)
+; [MENU]
+ButtonY         = Button(3)
+; [PAGE UP]
+ButtonLB        = Button(6)
+; [PAGE DOWN]
+ButtonRB        = Button(7)
+; [CAMERA]
+TriggerLT       = Button(10)
+; [TARGET]
+TriggerRT       = Button(8)
+; [ASSIST]
+ButtonBack      = Button(9)
+; [START]
+ButtonStart     = Button(4)
+
+; Keyboard X Button
+ButtonRS        = Keyboard(X)
 
 ; World map camera controls on right stick horizontal
-StickRightX     = Split( Button(6), Button(5) )
+StickRightX     = Split( Button(7), Button(6) )
+
+[Workarounds]
+ActiveVirtualControllerMask = 0x01
