--- a/GameConfigurations/[DE]Fanastasis/xidi.ini
+++ b/GameConfigurations/[DE]Fanastasis/xidi.ini
@@ -1,5 +1,14 @@
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; [DE]Fanastasis
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; Xidi Version:     4.2.0
+; Xidi Form:        winmm
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; Authors:          Kanadeforever
+; Last Modified:    20240510
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
 [Mapper]
-;Type = DigitalGamepad
 Type = Custom
 
 [Properties]
@@ -32,10 +41,5 @@ ButtonBack  = Keyboard(DIK_LMENU)
 ButtonStart = Keyboard(DIK_D)
 
 [Workarounds]
-; 需要修改此部分中的设置的情况并不常见。
-; 此部分用于以 DirectInput 或 WinMM API 通常不需要的方式修改 Xidi 的行为
-; 但对于解决某些应用程序的原始实现中的错误是必要的。
-; 除非应用程序需要任何可用的解决方法，否则应避免使用本节。
-
+; only one controller support.
 ActiveVirtualControllerMask = 0x01
-
