--- a/GameConfigurations/Ys Origin/xidi.ini
+++ b/GameConfigurations/Ys Origin/xidi.ini
@@ -1,11 +1,11 @@
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Ys Origin
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-; Xidi Version:     4.2.0
+; Xidi Version:     4.3.1
 ; Xidi Form:        dinput8
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Authors:          Kanadeforever
-; Last Modified:    20230506
+; Last Modified:    20250903
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [Mapper]
@@ -13,3 +13,4 @@ Type = DigitalGamepad
 
 [Workarounds]
 ActiveVirtualControllerMask = 0x01
+UseShortVirtualControllerNames = yes
