--- a/GameConfigurations/Need for Speed Hot Pursuit 2/xidi.ini
+++ b/GameConfigurations/Need for Speed Hot Pursuit 2/xidi.ini
@@ -38,4 +38,6 @@ ButtonLS        = MouseButton(Right)
 ButtonRS        = MouseButton(Left)
 
 [Workarounds]
-ActiveVirtualControllerMask = 0x01
+; Only play single-player mode, please turn it on
+; ActiveVirtualControllerMask = 0x01
+
